# doo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  ONTOLOGY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: contributing-planner.md  contributing-scope-queries.md  contributing-testing.md  engagement-config.md  grill-queue.md  running.md
docs/adr/: 0001-observation-and-inference-are-separate-nodes.md  0002-trustboundary-is-a-node.md  0003-roe-pure-policy-vs-stateful-guards.md  0004-endpoint-identity-is-a-revisable-inference.md  0005-cross-cutting-properties-pattern.md  0006-agent-requests-are-request-observations.md  0007-testcase-identity-is-content-addressed.md  0008-tenant-is-an-inference-node.md  0009-observed-value-is-a-promoted-inference-node.md  0010-principal-identity.md  0011-asset-and-observedvalue-coexist.md  0012-engagement-setup-tester-side-only.md  0013-dispatch-status-on-executed-as.md  0014-auth-helper-sibling-process.md  0015-l2-is-the-secrets-hashing-boundary.md  0016-l3-semantic-key-idempotency.md  0017-engagement-is-the-graph-root.md  0018-otel-correlation-ids-from-day-one.md  0019-engagement-loader-idempotent-reattach.md  0020-scope-governs-dispatch-not-ingestion.md  0021-neo4j-community-is-the-deployment-target.md  0022-re-templating-deferred-to-flush.md  0023-retire-responseartifact-promote-values-on-signal.md  0024-opaque-token-decouple-secrecy-from-promotion.md  0025-jwt-claims-as-values-discovered-principal-by-sub.md  0026-session-cookie-scoping-for-authcontext-identity.md  0027-identity-claims-from-any-credential-namespaced-claim-priority-key.md  0028-opaque-token-from-structured-leaves-not-body-sweep.md  0029-observed-response-identity-reconciliation.md  0030-unified-claim-keyed-identity-model.md  0031-sso-login-exchange-identity-binding.md  0032-identity-key-config-override.md  0033-c2-authz-coverage-success-semantics.md  0034-coverage-is-a-shared-query-library.md  0035-scope-patterns-are-glob-not-regex.md  0036-planner-is-gap-driven-with-pluggable-candidate-generators.md  0037-planner-io-contract-and-proposal-payloads.md  0038-planner-side-policy-uses-is-in-scope-not-opa.md  0039-trustboundary-inference-capability-and-tenant-only.md  0040-testcase-review-lifecycle.md  (+14 more)
docs/agents/: domain.md
docs/examples/: engagement.yaml
src/doo/: __init__.py  cli.py  cli_env.py  cli_worker.py
tests/: _cypher_registry.py  conftest.py  coverage-matrix.md  test_auth_cue_extraction.py  test_auth_helper.py  test_auth_helper_e2e.py  test_auth_reconciliation.py  test_candidate_extraction.py  test_canonical_identity.py  test_cli_env.py  test_cli_env_llm.py  test_cli_worker.py  test_commit_unit.py  test_cookie_classifier.py  test_coverage_c1_e2e.py  test_coverage_c1_unit.py  test_coverage_c2_e2e.py  test_coverage_c2_unit.py  test_coverage_c2b_e2e.py  test_coverage_c2b_unit.py  test_coverage_c3_e2e.py  test_coverage_c3_unit.py  test_coverage_c4_e2e.py  test_coverage_c4_unit.py  test_coverage_c5_e2e.py  test_coverage_cli.py  test_coverage_reached_unit.py  test_coverage_scope_warning_unit.py  test_cross_engagement.py  test_cypher_static_guard.py  test_cypher_syntax_smoke.py  test_dispatch_authz_classes_e2e.py  test_dispatch_baseline_victim_sibling_e2e.py  test_dispatch_baseline_victim_sibling_unit.py  test_dispatch_classify.py  test_dispatch_config.py  test_dispatch_constructors.py  test_dispatch_dispatcher.py  test_dispatch_e2e.py  test_dispatch_hazards.py  (+63 more)
tests/e2e/: __init__.py  conftest.py  test_pipeline_full_e2e.py  test_slice1_full.py
tests/fixtures/: __init__.py  all_malformed.har  anon_burp.har  (+6 more)
(+116 files in other folders)
